--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
@@ -2,8 +2,16 @@
     <div class="eaton-ttil-list-category-hero container-fluid">
         <div class="row">
             <div class="col-xs-12">
-                <img src="${data.image}" class="hidden-xs img-responsive" />
-                <img src="${data.mobile_image}" class="hidden-sm img-responsive" />
+                <img src="${data.image}" class="visible-xs img-responsive category-hero__header-image" />
+                <img src="${data.mobile_image}" class="hidden-xs img-responsive category-hero__header-image" />
+                <div class="category-hero__header-content">
+                    <div>
+                        Left side
+                    </div>
+                    <div>
+                        Right side
+                    </div>
+                </div>
             </div>
         </div>
     </div>
