--- a/eaton.frontend/src/components/list/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-default.scss
@@ -39,27 +39,30 @@
   }
 }
 
-.carousel-indicators {
-  position: inherit;
-  margin: 15px auto 0;
+.eaton-list-component {
+  & .carousel-indicators {
+    position: inherit;
+    margin: 15px auto 0;
+  }
+
+  & .carousel-indicators li {
+    width: 15px;
+    height: 15px;
+    cursor: inherit;
+    background-color: $color__primary-gray3;
+    border: 0;
+    border-radius: 50%;
+    margin: 0 4px;
+  }
+
+  & .carousel-indicators .active {
+    background-color: $color__primary-blue;
+    width: 15px;
+    height: 15px;
+    margin: 0 4px;
+  }
 }
 
-.carousel-indicators li {
-  width: 15px;
-  height: 15px;
-  cursor: inherit;
-  background-color: $color__primary-gray3;
-  border: 0;
-  border-radius: 50%;
-  margin: 0 4px;
-}
-
-.carousel-indicators .active {
-  background-color: $color__primary-blue;
-  width: 15px;
-  height: 15px;
-  margin: 0 4px;
-}
 
 .category__item-innerpadding {
   padding: 30px;
