M49 Category Highlight - Adding CTA at the bottom

--- a/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
@@ -6,6 +6,15 @@
   &-container {
     margin-bottom: 30px;
   }
+
+  &__cta-container {
+    margin-top: 30px;
+    a:hover,
+    a:active,
+    a:focus {
+      color: $color__white;;
+    }
+  }
 }
 
 @media only screen and (max-width: 767px) {
