--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -67,6 +67,13 @@
             </div>
         </div>
 
+        <!--/* Bottom CTA */-->
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 text-center featured-category__cta-container">
+                <sly data-sly-resource="${'featured-article-ctabutton' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
+            </div>
+        </div>
+
     </div>
 
 </sly>
