--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
@@ -1,5 +1,9 @@
 .tile-link-component {
 
+  &__copy {
+    padding: 60px 0;
+  }
+
   &__element {
 
     color: $color__white;
@@ -42,6 +46,14 @@
 
   }
 
+  &__icon {
+    position: absolute;
+    bottom: 70px;
+    color: $color__white;
+    width: 20%;
+    left: 15px;
+  }
+
   &__image {
     width: 100%;
   }
@@ -70,6 +82,12 @@
     &__element {
       margin-left: 0;
     }
+  }
+}
+
+@include media-mobile-only {
+  .tile-link-component {
+    margin: 0 15px;
   }
 }
 
