--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-tile-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-tile-links.html
@@ -1,12 +1,20 @@
-<sly data-sly-use.data="../data/view-tile-links-multiple-data.js">
+<sly data-sly-use.data="../data/view-tile-links-icon-data.js">
     <div class="tile-link-component container">
-        <div class="row" data-sly-list.tile="${data}">
-            <a class="col-xs-12 col-sm-6 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${!tile.image}" href="${tile.link}">
-                <h2 class="tile-link-component__title ${tile.image != '' ? 'tile-link-component__title--background' : ''  }">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
+        <div class="tile-link-component__copy">
+            <h2>${data.header}</h2>
+            <p>${data.description}</p>
+        </div>
+        <div class="row" data-sly-list.tile="${data.element}">
+            <a class="col-xs-12 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${!tile.image && !tile.icon}" href="${tile.link}">
+                <h2 class="tile-link-component__title">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
             </a>
-            <a class="col-xs-12 col-sm-6 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${tile.image}" href="${tile.link}"
+            <a class="col-xs-12 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${tile.image}" href="${tile.link}"
                style="background:url('${tile.image @ context='styleString'}') center no-repeat; background-size: cover">
                 <h2 class="tile-link-component__title ${tile.image != '' ? 'tile-link-component__title--background' : ''  }">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
+            </a>
+            <a class="col-xs-12 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${tile.icon}" href="${tile.link}">
+                <img class="tile-link-component__icon" src="${tile.icon}" alt="">
+                <h2 class="tile-link-component__title">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
             </a>
         </div>
     </div>
