Highlight statement - Styles, Markup & data

--- a/eaton.frontend/src/components/grid-col-control/css/grid-col-control.scss
+++ b/eaton.frontend/src/components/grid-col-control/css/grid-col-control.scss
@@ -8,13 +8,18 @@
 // Base Styles
 .eaton-grid-control {
   position: relative;
+  margin: $spacing__sm 0;
 
   //-----------------------------------
   // Mobile Breakpoint
   //-----------------------------------
   @include media-mobile-and-tablet {
     &__column {
-      margin-top: ($spacing__sm);
+      margin-bottom: ($spacing__sm);
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
