Modifying 3-col controls to use structure like 2-col (reuse styles)

--- a/eaton.frontend/src/components/text/css/views/_view-statement.scss
+++ b/eaton.frontend/src/components/text/css/views/_view-statement.scss
@@ -9,6 +9,7 @@
     font-family: Arial;
     font-style: italic;
     color: $color__primary-gray3;
+    margin: 0;
   }
 
   //-----------------------------------
