--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-3-column-control/static_grid-3-column-control.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-3-column-control/static_grid-3-column-control.html
@@ -3,16 +3,23 @@
 </sly>
 
 
-<div class="eaton-grid-3-column-control">
+<div class="eaton-grid-control eaton-grid-control--3-col">
   <div class="container">
     <div class="row">
+      <!--/* Include Parsys - Column One */-->
+      <div class="col-xs-12 col-md-4 eaton-grid-control__column">
+          <sly data-sly-resource="${@path='col1-par', resourceType='wcm/foundation/components/parsys'}" />
+      </div>
 
-      <div class="col-xs-12 col-md-4"> Column </div>
+      <!--/* Include Parsys - Column Two */-->
+      <div class="col-xs-12 col-md-4 eaton-grid-control__column">
+          <sly data-sly-resource="${@path='col2-par', resourceType='wcm/foundation/components/parsys'}" />
+      </div>
 
-      <div class="col-xs-12 col-md-4"> Column </div>
-
-      <div class="col-xs-12 col-md-4"> Column </div>
-
+      <!--/* Include Parsys - Column Three */-->
+      <div class="col-xs-12 col-md-4 eaton-grid-control__column">
+          <sly data-sly-resource="${@path='col3-par', resourceType='wcm/foundation/components/parsys'}" />
+      </div>
     </div>
   </div>
 </div>
