Proof Points - Initial Style (static + adding helper files)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
@@ -1,9 +1,6 @@
-<sly data-sly-use.data="../data/view-vertical-data.js">
+<sly data-sly-use.data="../data/view-proof-points.js">
 
-  <div class="eaton-link-list-vertical">
-
-    <!--/* If Eyebrow */-->
-    <div data-sly-test="${ data.view.eyebrow }" class="eaton-link-list-vertical__eyebrow eyebrow-small">${ data.view.eyebrow }</div>
+  <div class="icon-list-proof-points">
 
     <!--/* List Links */-->
     <ul
