--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -8,32 +8,22 @@
   padding-top: $spacing__xl;
   padding-bottom: $spacing__xl;
 
-  // TODO: check if I can upload it to base components
-  h2 {
-    font-size: 3.6rem;
-    font-weight: bold;
-  }
-
-  h4 {
-    font-size: 2.9rem;
-  }
-
-  &__title {
-    margin-bottom: $spacing__sm;
-  }
-
-  &__paragraph {
-    margin-bottom: $spacing__md;
-  }
+  // &__title {
+  //   margin-bottom: $spacing__sm;
+  // }
+  //
+  // &__paragraph {
+  //   margin-bottom: $spacing__md;
+  // }
 
   &__button-container {
     margin-top: $spacing__md;
   }
 
-  &__list-title {
-    font-weight: bold;
-    margin-bottom: $spacing__sm;
-  }
+  // &__list-title {
+  //   font-weight: bold;
+  //   margin-bottom: $spacing__sm;
+  // }
 
   @include media-mobile-only {
     &__list-title {
