removed space for first nav-item

--- a/eaton.frontend/src/components/link-list/css/views/_view-section-navigation.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-section-navigation.scss
@@ -32,6 +32,11 @@
       display: block;
       padding: 20px 0;
       font-size: 1.8rem;
+
+
+      &:first-child {
+        padding-left: 0;
+      }
     }
   }
 
