Proof Points Components - Styles (Responsive)

--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -7,9 +7,14 @@
   &__item {
     display: flex;
     align-items: center;
+    margin-bottom: ($spacing__sm);
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
-  &__img {
+  &__image {
     width: 80px;
   }
 
@@ -19,7 +24,68 @@
 
   &__facts {
     color: $color__accent-aqua;
-    font-size: 75px;
-    margin-bottom: $spacing__sm;
+    font-weight: bold;
+    line-height: 1;
+    margin-left: -3px;
+    display: inline-block;
+  }
+
+  &__symbol {
+    color: $color__accent-aqua;
+
+    font-weight: bold;
+    position: relative;
+    top: -20px;
+    right: 0;
+    display: inline-block;
+  }
+
+  //-----------------------------------
+  // Media-Query: Mobile
+  //-----------------------------------
+  @include media-mobile-and-tablet {
+    &__item {
+      justify-content: center;
+      margin-bottom: ($spacing__sm * 3);
+    }
+
+    &__image {
+      width: 150px;
+    }
+
+    &__content {
+      padding-left: 80px;
+    }
+
+    &__facts {
+      font-size: 100px;
+    }
+
+    &__symbol {
+      font-size: 50px;
+      top: -30px;
+    }
+
+    &__related {
+      font-size: 36px;
+    }
+  }
+
+  //-----------------------------------
+  // Media-Query: Desktop
+  //-----------------------------------
+  @include media-desktop-and-up {
+    &__facts {
+      font-size: 75px;
+    }
+
+    &__symbol {
+      font-size: 45px;
+      top: -20px;
+    }
+
+    &__related {
+      font-size: 29px;
+    }
   }
 }
