--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-secondary-search-box.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-secondary-search-box.html
@@ -7,6 +7,15 @@
           <input type="text" name="q"
             placeholder="${ data.form.placeholder }"
             class="eaton-search-box__input" >
+
+          <div class="eaton-search-box__results-container">
+            <ul class="eaton-search-box__result-list" >
+              <li class="eaton-search-box__result-item">Hola</li>
+              <li class="eaton-search-box__result-item">Hola</li>
+              <li class="eaton-search-box__result-item">Hola</li>
+            </ul>
+          </div>
+
           <div class="eaton-search-box__buttons-container" >
             <button class="eaton-search-box__button-transparent">
               <span class="sr-only">${data.form.externalLinkLabel}</span>
