--- a/eaton.frontend/src/components/search-box/css/views/_view-secondary-search-box.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-secondary-search-box.scss
@@ -12,32 +12,72 @@
 
   &__buttons-container {
     height: 30px;
-    margin-top: -15px;
     position: absolute;
     right: 0;
-    top: 50%;
+    top: 5px;
   }
 
   &__button-transparent {
     background: none;
     border: none;
-    color: white;
+    color: $color__white;
     font-size: 2rem;
-    padding: 0 11px 0;
+    padding: 0 0 0 30px;
+    position: relative;
+
+    &:first-child {
+      &::after {
+        content: '';
+        background-color: $color__white;
+        position: absolute;
+        height: 20px;
+        width: 1px;
+        right: -19px;
+        top: 3px;
+      }
+    }
+  }
+
+  &__results-container {
+    display: none;
+    padding: 50px 0 20px;
+  }
+
+  &__result-list {
+    list-style: none;
+    color: white;
+    padding: 0;
+  }
+
+  &__result-item {
+    font-size: 1.9rem;
+    padding: 3px 0;
   }
 
   &__input {
     background: transparent;
     border: 0;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid $color__white;
     color: white;
     display: block;
     font-size: 2.5rem;
     font-weight: bold;
+    outline: none;
     width: 100%;
 
     &::placeholder {
-      color: white;
+      color: $color__white;
     }
+
+    &:focus {
+      & + .eaton-search-box__results-container {
+        display: block;
+      }
+
+      &::placeholder {
+        color: transparent;
+      }
+    }
+
   }
 }
