--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
@@ -1,16 +1,12 @@
 .eaton-featured-topic { padding-top: 120px; padding-bottom: 120px; }
 
-.eaton-featured-topic h2 { font-size: 3.6rem; font-weight: bold; }
+.eaton-featured-topic .glyphicon { display: none; }
 
-.eaton-featured-topic h4 { font-size: 2.9rem; }
+.eaton-featured-topic .eaton-link-list-vertical__list-link { font-weight: bold; }
 
-.eaton-featured-topic__title { margin-bottom: 30px; }
-
-.eaton-featured-topic__paragraph { margin-bottom: 60px; }
+.eaton-featured-topic__text { margin-bottom: 60px; }
 
 .eaton-featured-topic__button-container { margin-top: 60px; }
-
-.eaton-featured-topic__list-title { font-weight: bold; margin-bottom: 30px; }
 
 @media screen and (max-width: 767px) { .eaton-featured-topic__list-title { margin-top: 30px; } }
 
