--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -43,3 +43,5 @@
 .eaton-search-box__input:valid:-ms-input-placeholder { color: transparent; }
 
 .eaton-search-box__input:valid::placeholder { color: transparent; }
+
+@media screen and (max-width: 991px) { .eaton-search-box__results-container { padding: 0; } }
