--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -32,3 +32,19 @@
 .eaton-single-feature__item i { font-size: 0.75em; margin-left: 0.25em; }
 
 .dark-theme .eaton-single-feature__item { color: #FFF; }
+
+.feature-block-component__container { height: 600px; }
+
+.feature-block-component__copy { height: 100%; color: #FFF; }
+
+.feature-block-component__text { padding: 60px 60px 60px 120px; }
+
+.feature-block-component__image { height: 100%; }
+
+.feature-block-component__cta { margin-top: 60px; }
+
+@media screen and (max-width: 767px) { .feature-block-component__container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; margin: 0; }
+  .feature-block-component__text { padding: 0; }
+  .feature-block-component__copy { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; } }
+
+@media screen and (min-width: 768px) and (max-width: 991px) { .feature-block-component__container { height: 400px; } }
