--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -109,6 +109,10 @@ h5__link, .heading-h5__link { font-size: 2.4rem; font-weight: bold; }
 
 .b-button--light:hover, .b-button--light:active, .b-button--light:focus { color: #FFF; background: #005EB8; border-color: #005EB8; text-decoration: none; }
 
+.b-button--white { border-color: #FFF; color: #FFF; padding: 20px 40px; font-size: 1.6em; text-align: center; }
+
+.b-button--white:hover { text-decoration: none; color: #FFF; }
+
 .b-button--dark { border-color: #FFF; color: #FFF; }
 
 .b-button--dark:hover, .b-button--dark:active, .b-button--dark:focus { color: #005EB8; background: #FFF; border-color: #FFF; text-decoration: none; }
