M9 TTIL List - Category Hero

--- a/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
@@ -9,10 +9,11 @@
 
   &__cta-container {
     margin-top: 30px;
+
     a:hover,
     a:active,
     a:focus {
-      color: $color__white;;
+      color: $color__white;
     }
   }
 }
