--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -84,4 +84,30 @@
 
 .category-hero__header-image { width: 100%; height: auto; }
 
-.category-hero__header-content { position: absolute; top: 0; left: 0; }
+.category-hero__header-content { position: absolute; top: 20%; color: #FFF; width: 100%; }
+
+.category-hero__header-cta { border: 0; font-size: 1.2em; color: #FFF; }
+
+.category-hero-eye-brown { color: #FFF; }
+
+.category-hero-eye-brown a:hover, .category-hero-eye-brown a:active, .category-hero-eye-brown a:visited, .category-hero-eye-brown a:focus { color: #FFF; text-decoration: none; }
+
+.category-hero-body-copy { color: #FFF; font-size: 1.2em; margin-top: 30px; }
+
+.category-hero__header-title h2 { font-size: 3.5em; margin-top: 30px; margin-bottom: 30px; }
+
+.category-hero-bottomline { background-color: #FFF; height: .3em; width: 4em; }
+
+@media only screen and (max-width: 480px) { .category-hero__header-image { height: 430px; }
+  .category-hero__header-content { top: 15%; }
+  .category-hero__header-title h2 { font-size: 2em; }
+  .category-hero-body-copy { font-size: 1em; }
+  .category-hero__header-cta { font-size: 1em; } }
+
+@media only screen and (min-width: 481px) and (max-width: 991px) { .category-hero__header-image { height: 430px; }
+  .category-hero__header-content { top: 15%; }
+  .category-hero__header-title h2 { font-size: 2.5em; }
+  .category-hero-body-copy { font-size: 1.5em; }
+  .category-hero__header-cta { font-size: 1.5em; } }
+
+@media only screen and (min-width: 991px) { .category-hero__header-image { min-height: 385px; } }
