fix for carousel image

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -10,7 +10,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-component-slide carousel-inner" data-sly-list.slide="${data.hero}" role="listbox">
         <div class="item ${slideList.index == 0 ? 'active' : ''}">
-            <img class="img-responsive hidden-xs" src="${slide.image}" alt="${slide.alt}">
+            <img class="img-responsive hidden-xs carousel-component-slide__image" src="${slide.image}" alt="${slide.alt}">
             <img class="img-responsive visible-xs" src="${slide.mobile_image}" alt="${slide.alt}">
             <div class="carousel-component-slide__caption carousel-caption">
                 <h2 class="carousel-component-slide__title">${slide.title}</h2>
