--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -7,10 +7,21 @@
   &__copy {
     height: 100%;
     color: $color__white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__text {
-    padding: 60px 60px 60px 120px;
+    padding-left: 120px;
+    padding-right: 40px;
+  }
+
+  &__description {
+    font-family: $font-family__primary;
+    font-size: 1.125em;
+    line-height: 1.5;
+    padding-top: 30px;
   }
 
   &__image {
@@ -18,7 +29,7 @@
   }
 
   &__cta {
-    margin-top: 60px;
+    margin-top: 30px;
   }
 }
 
@@ -32,7 +43,7 @@
     }
 
     &__text {
-      padding: 0;
+      padding: 30px;
     }
     &__copy {
       order: 1;
