--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
@@ -18,7 +18,7 @@
                         <div class="category-hero-bottomline"></div>
                     </div>
                     <div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0 category-hero-body-copy">
-                        <sly data-sly-resource="${'category-hero-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
+                        <p>${data.text}</p>
                     </div>
                 </div>
             </div>
