Image List - Markup + Styles

--- a/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
@@ -10,4 +10,5 @@
 @import 'views/view-featured-story';
 @import "views/view-product-overview";
 @import "views/view-tile-links";
+@import "views/view-image-only";
 @import "views/view-category-hero";
