add styling for feature article

--- a/eaton.frontend/src/components/list/css/list.scss
+++ b/eaton.frontend/src/components/list/css/list.scss
@@ -4,3 +4,4 @@
 // Import SubViews
 @import 'views/view-default';
 @import 'views/view-featured-article';
+@import 'views/view-article-list-single-feature';
