--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
@@ -13,8 +13,9 @@
             </a>
         </div>
         <div class="col-xs-12 col-md-6 feature-block-component__image" data-sly-list.card="${data.cards}">
-            <a href="${data.single_feature_card.url}" class="equal-height-row tablet-card">
-                <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
+            <a href="${data.single_feature_card.url}" class="">
+                <span class="article-list-single-feature--border"></span>
+                <div class="category__item-innerpadding category__item">
                     <p class="related-category__title--font category__title--bottompadding">${card.title}</p>
                     <p class="category__link--font">${card.text}</p>
                     <p class="category-item-date"><em>${card.date}</em></p>
