--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -52,6 +52,7 @@
                                 <div class="category__item--border category__item-innerpadding carousel__item">
                                     <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
                                     <h5 class="category__link--font">${slider.link_text}</h5>
+                                    <p class="category-item-date"><em>${slider.date_text}</em></p>
                                 </div>
                             </div>
                         </a>
