--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -5,6 +5,47 @@
     border-color: $color__primary-blue;
     width: 60px;
     display: block;
-    margin-left: 30px;
+    margin-left: 0;
+  }
+
+  &__text {
+    margin-left: 15px;
+  }
+
+  &__article {
+
+    &--copy {
+      padding: 50px 0;
+    }
+  }
+
+  &__cta {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@include media-mobile-only {
+  .article-list-single-feature {
+
+    &__article {
+      margin-top: 30px ;
+    }
+  }
+}
+
+@include media-desktop-and-up {
+  .article-list-single-feature {
+
+    &--border {
+      margin-left: 30px;
+    }
+
+    &__article {
+
+      &--copy {
+        padding: 50px 30px;
+      }
+    }
   }
 }
