Adding / Updating Global Styleguide Text Elements

--- a/eaton.frontend/src/global/css/_config/_sass.scss
+++ b/eaton.frontend/src/global/css/_config/_sass.scss
@@ -1,3 +1,4 @@
 // Import All SASS config files (Variables, Mixins, Functions, Extends etc...)
 @import 'variables/**/*.scss';
 @import 'mixins/**/*.scss';
+@import 'placeholders/**/*.scss';
