--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -8,11 +8,27 @@
 body {
   color: $color__primary-gray1;
   font-family: $font-family__secondary;
-
-  // .dark-theme & {
-  //   color: $color__white;
-  // }
+  font-size: 16px;
 }
+
+b,
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
+}
+
+// NOTE: <i> tag is being used for Glyphicon-fonts elements
+i {
+  font-style: normal;
+}
+
+p {
+  line-height: 1.3;
+}
+
 
 // Headings
 //----------------
@@ -36,32 +52,44 @@ h5,
 
 h1,
 .heading-h1 {
+  @extend %h1;
   margin-top: 0;
 }
 
 h2,
 .heading-h2 {
+  @extend %h2;
   margin-top: 0;
 }
 
 h3,
 .heading-h3 {
+  @extend %h3;
   margin-top: 0;
 }
 
 h4,
 .heading-h4 {
+  @extend %h4;
   margin-top: 0;
 }
 
 h5,
 .heading-h5 {
+  @extend %h5;
   margin-top: 0;
+}
 
-  &__link {
-    font-size: 2.4rem;
-    font-weight: bold;
-  }
+
+
+// BodyCopy
+//--------------
+.body-copy {
+  @extend %body-copy;
+}
+
+.body-copy-small {
+  @extend %body-copy;
 }
 
 
@@ -74,6 +102,9 @@ h5,
 // Eg: <a href="#" class="body-link heading-h5">...</a>
 //---------------------
 
+
+// TODO: TBD
+/*
 .body-link {
   color: $color__primary-blue;
 
@@ -134,3 +165,4 @@ h5,
   }
 
 }
+*/
