--- a/eaton.frontend/src/global/css/etn-global.scss
+++ b/eaton.frontend/src/global/css/etn-global.scss
@@ -2,7 +2,7 @@
 // Import Global Project Files
 //--------------
 
-// All SASS config files (Variables, Mixins, Functions, Extends etc...)
+// All SASS config files (Variables, Mixins, Functions, etc...)
 @import "_config/sass";
 
 
