Update Title Component base on Feedback + Fix Lint Errors

--- a/eaton.frontend/src/components/title/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-default.scss
@@ -3,4 +3,18 @@
 //-----------------------------------
 .eaton-title {
 
+  &__eyebrow {
+    color: $color__primary-blue;
+    font-size: 52px;
+    margin:  0;
+  }
+
+  &__headline {
+    margin-bottom: 0;
+  }
+
+  &__byline {
+
+  }
+
 }
