--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-product-overview.html
@@ -5,19 +5,18 @@
     <div class="container">
       <div class="row">
 
-        <div class="eaton-page-overview__header col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-6">
           <div class="eaton-page-overview__title">
             <sly data-sly-resource="${'page-overview-text' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
           </div>
 
-          <div class="eaton-page-overview__cta hidden-xs text-center">
+          <div class="eaton-page-overview__cta hidden-xs">
             <sly data-sly-resource="${'page-overview-ctabutton' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
           </div>
         </div>
 
-
-        <div class="eaton-page-overview__content col-xs-12 col-sm-6">
-          <div class="eaton-page-overview__text">
+        <div class="col-xs-12 col-sm-6">
+          <div class="eaton-page-overview__content">
             <sly data-sly-resource="${'page-overview-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
           </div>
         </div>
