--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-witheyebrowandbyline-data.js">
+<sly data-sly-use.data="../data/title-data.js">
 
   <div class="eaton-title eaton-title--eyebrow-and-byline">
     <h2 class="eaton-title__eyebrow">${ data.eyebrow }</h2>
