--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -1,3 +1,7 @@
+.eaton-page-overview .eaton-title__headline { font-family: 'EatonMedium', sans-serif; font-size: 35px; line-height: 40px; }
+
+@media screen and (min-width: 992px) { .eaton-page-overview .eaton-title__headline { font-size: 54px; line-height: 68px; } }
+
 .carousel-component-slide:hover > .carousel-component__arrow { display: block; border: 0; background-image: none; }
 
 .carousel-component-slide__caption { top: 10%; }
@@ -36,17 +40,13 @@
 
 .eaton-page-overview { padding: 120px 0; }
 
-.eaton-page-overview__cta { text-align: center; }
+.eaton-page-overview__title { position: relative; margin-bottom: 60px; padding-bottom: 60px; }
 
-.eaton-cta-button { background-color: #FFF; color: #005EB8; border: 2px solid #005EB8; padding: 20px 40px; display: inline-block; max-width: 600px; text-align: center; margin: 60px 0 0; text-decoration: none; }
+.eaton-page-overview__title::after { content: ''; background-color: #005EB8; bottom: 0; display: block; height: 4px; left: 0; position: absolute; width: 68px; }
 
-.eaton-cta-button:hover { background-color: #005EB8; color: #FFF; text-decoration: none; }
+@media screen and (max-width: 767px) { .eaton-page-overview__cta { margin-top: 60px; } }
 
-.eaton-title__eyebrow { color: #005EB8; font-size: 52px; margin: 0; }
-
-.eaton-title__dash { display: block; width: 68px; height: 4px; margin: 60px 0; background-color: #005EB8; }
-
-.eaton-title__byline { font-size: 12px; margin-top: 15px; }
+@media screen and (min-width: 992px) { .eaton-page-overview .eaton-title__headline { font-size: 54px; line-height: 68px; } }
 
 .tile-link-component__copy { padding: 60px 0; }
 
