--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -1,5 +1,7 @@
 .article-list-single-feature {
 
+  padding-bottom: 50px;
+
   &--border {
     border-top: 4px solid;
     border-color: $color__primary-blue;
