--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -56,6 +56,8 @@
 
 @media only screen and (min-width: 1200px) { .category__item { min-height: 280px; } }
 
+.article-list-single-feature { padding-bottom: 50px; }
+
 .article-list-single-feature--border { border-top: 4px solid; border-color: #005EB8; width: 60px; display: block; margin-left: 0; }
 
 .article-list-single-feature__text { margin-left: 15px; }
