--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
@@ -1,1 +1,15 @@
-.eaton-quote { padding: 60px 0; }
+.eaton-quote .container { padding: 100px 0 60px; border-top: 4px solid #EEF0F2; border-bottom: 4px solid #EEF0F2; position: relative; }
+
+.eaton-quote__image { width: 80px; height: 82px; background: url("/content/dam/eaton/images/Quote.png") no-repeat; position: absolute; top: 0; left: 0; right: 0; margin: 0 auto; }
+
+.eaton-quote__text { font-size: 34px; font-style: italic; font-family: Arial; color: #98A4AE; margin-bottom: 60px; }
+
+.eaton-quote__author { font-size: 20px; font-family: Arial; font-style: italic; color: #333F48; }
+
+.eaton-quote__name { font-weight: bold; }
+
+@media screen and (max-width: 991px) { .eaton-quote .container { padding: 60px 15px 25px; }
+  .eaton-quote__image { width: 17%; height: 50px; background-size: contain; }
+  .eaton-quote__text { font-size: 23px; margin-bottom: 20px; }
+  .eaton-quote__author { font-size: 16px; }
+  .eaton-quote__name { display: block; } }
