--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
@@ -64,3 +64,52 @@
     bottom: 56px;
   }
 }
+
+// ******** landing hero styles **********
+.landing-hero-single {
+
+  .carousel-component-slide {
+
+    &__caption {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      bottom: auto;
+    }
+
+    &__separator {
+      width: 5%;
+      height: 2px;
+      background: $color__white;
+      margin: 20px auto;
+    }
+
+    h2 {
+      font-size: 53px;
+    }
+
+    &__text {
+      font-size: 20px;
+    }
+  }
+}
+
+@include media-mobile-and-tablet {
+  .landing-hero-single {
+
+    .carousel-component-slide {
+
+      h2 {
+        font-size: 35px;
+      }
+
+      &__separator {
+        display: none;
+      }
+
+      &__text {
+        font-size: 14px;
+      }
+    }
+  }
+}
