--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -17,6 +17,18 @@
 @media screen and (max-width: 991px) { .carousel-component-slide__caption { top: 0; }
   .carousel-indicators { bottom: 56px; } }
 
+.landing-hero-single .carousel-component-slide__caption { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); bottom: auto; }
+
+.landing-hero-single .carousel-component-slide__separator { width: 5%; height: 2px; background: #FFF; margin: 20px auto; }
+
+.landing-hero-single .carousel-component-slide h2 { font-size: 53px; }
+
+.landing-hero-single .carousel-component-slide__text { font-size: 20px; }
+
+@media screen and (max-width: 991px) { .landing-hero-single .carousel-component-slide h2 { font-size: 35px; }
+  .landing-hero-single .carousel-component-slide__separator { display: none; }
+  .landing-hero-single .carousel-component-slide__text { font-size: 14px; } }
+
 .featured-story-component__content { padding: 60px 50px; }
 
 .featured-story-component__text { color: #FFF; font-size: 2.45em; font-family: "Eaton", Arial, sans-serif; line-height: 1.25em; padding-top: 30px; }
