--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -10,6 +10,12 @@
     margin-left: 0;
   }
 
+  &__link {
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
   &__text {
     margin-left: 15px;
   }
