--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-story.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-story.scss
@@ -1,19 +1,34 @@
 .featured-story-component {
 
   &__content {
-    padding: 60px 50px;
+    padding: 60px 40px;
   }
 
   &__text {
     color: $color__white;
-    font-size: 2.45em;
+    font-size: 2.30em;
     font-family: $font-family__primary;
     line-height: 1.25em;
     padding-top: 30px;
   }
+  
+  &__arrow {
+    font-size: .70em;
+    left: 10px;
+  }
 
   &__title {
     font-size: 2.55em;
+  }
+
+  &__link {
+
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: none;
+      color: $color__white;
+    }
   }
 
   &__blue {
