--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -60,6 +60,8 @@
 
 .article-list-single-feature--border { border-top: 4px solid; border-color: #005EB8; width: 60px; display: block; margin-left: 0; }
 
+.article-list-single-feature__link:hover { text-decoration: none; }
+
 .article-list-single-feature__text { margin-left: 15px; }
 
 .article-list-single-feature__article--copy { padding: 50px 0; }
