--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
@@ -13,7 +13,9 @@
     position: relative;
     padding: 0;
 
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
       color: $color__white;
       text-decoration: none;
   }
@@ -64,6 +66,7 @@
     width: 100%;
     margin: 0;
     padding: 10px 15px;
+    font-size: 2.25em;
 
     &--background {
       background-color: $color__primary-gray1;
